# restaurant-operations-rag

./: .env.example  .gitignore  Makefile  README.md  README.zh-TW.md  render.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  chat_service.py  chunking.py  cli.py  config.py  database.py  evaluation.py  ingestion.py  main.py  models.py  openai_service.py  rate_limit.py
backend/evals/: cases.json
backend/migrations/: 001_initial.sql  002_citation_snapshots.sql  003_document_source_id.sql  004_evaluation_runs.sql  005_evaluation_quality_metrics.sql
backend/restaurant_rag_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_chat_service.py  test_chunking.py  test_config.py  test_database.py  test_evaluation.py  test_knowledge_quality.py  test_migrations.py  test_rate_limit.py
docs/: deployment-guide.zh-TW.md  evaluation-report.md  experiment-log.md
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/assets/: main.css
frontend/components/: ChatPanel.vue
frontend/pages/: evaluations.vue  index.vue
frontend/tests/: api-error.test.ts  evaluation-report.test.ts
frontend/types/: api.ts
knowledge/: 01-menu-allergens.md  02-menu-preparation.md  03-food-safety.md  04-fryer-cleaning.md  05-dishwasher.md  06-customer-complaints.md  07-opening-global.md  08-closing-global.md  09-emergency.md  10-reservations.md  11-taipei-opening.md  12-taipei-closing.md  13-taichung-opening.md  14-taichung-closing.md  15-pos.md  16-staff-hygiene.md  17-taipei-menu-overview.md
(+2 files in other folders)
